[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/scenes/tasks/task_farm.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/scenes/buildings/building_towncenter.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scenes/buildings/building_base.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/units/unit_basic.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/art/tileset/paths.res" type="TileSet" id=5]
[ext_resource path="res://assets/art/tileset/env.res" type="TileSet" id=6]
[ext_resource path="res://src/scripts/ui/camera2d.gd" type="Script" id=7]
[ext_resource path="res://src/scripts/games_management/world_manager.gd" type="Script" id=8]
[ext_resource path="res://assets/art/UI/blue_panel.png" type="Texture" id=9]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 891.076, 175.744, 1020.56, 174.409, 1017.89, 303.889, 949.903, 301.846, 949.809, 478.753, 510.508, 296.268, 508.014, 128.236, 885.737, -15.1382, -2.60876, -0.432175, 365.282, 125.785, 0.973328, 486.9, 368.646, 295.589 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 0, 3, 4, 5, 6 ), PoolIntArray( 7, 0, 6, 8 ), PoolIntArray( 8, 6, 9 ), PoolIntArray( 10, 8, 9, 11 ), PoolIntArray( 4, 10, 11, 5 ) ]
outlines = [ PoolVector2Array( 885.737, -15.1382, 891.076, 175.744, 1020.56, 174.409, 1017.89, 303.889, 949.903, 301.846, 949.809, 478.753, 0.973328, 486.9, -2.60876, -0.432175 ), PoolVector2Array( 365.282, 125.785, 368.646, 295.589, 510.508, 296.268, 508.014, 128.236 ) ]

[node name="world" type="Node2D"]
script = ExtResource( 8 )

[node name="tm_env" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
format = 1
tile_data = PoolIntArray( 0, 5, 0, 1, 5, 0, 2, 5, 0, 3, 5, 0, 4, 5, 0, 5, 5, 0, 6, 5, 0, 7, 5, 0, 8, 5, 0, 9, 5, 0, 10, 5, 0, 11, 5, 0, 12, 5, 0, 13, 5, 0, 65536, 5, 0, 65537, 5, 0, 65538, 5, 0, 65539, 5, 0, 65540, 5, 0, 65541, 5, 0, 65542, 5, 0, 65543, 5, 0, 65544, 5, 0, 65545, 5, 0, 65546, 5, 0, 65547, 5, 0, 65548, 5, 0, 65549, 5, 0, 131072, 5, 0, 131073, 5, 0, 131074, 5, 0, 131075, 5, 0, 131076, 5, 0, 131077, 5, 0, 131078, 5, 0, 131079, 5, 0, 131080, 5, 0, 131081, 5, 0, 131082, 5, 0, 131083, 5, 0, 131084, 5, 0, 131085, 5, 0, 196608, 5, 0, 196609, 5, 0, 196610, 5, 0, 196611, 5, 0, 196612, 5, 0, 196613, 5, 0, 196614, 5, 0, 196615, 5, 0, 196616, 5, 0, 196617, 5, 0, 196618, 5, 0, 196619, 5, 0, 196620, 5, 0, 196621, 5, 0, 196622, 5, 0, 196623, 5, 0, 262144, 5, 0, 262145, 5, 0, 262146, 5, 0, 262147, 5, 0, 262148, 5, 0, 262149, 5, 0, 262150, 5, 0, 262151, 5, 0, 262152, 5, 0, 262153, 5, 0, 262154, 5, 0, 262155, 5, 0, 262156, 5, 0, 262157, 5, 0, 262158, 5, 0, 262159, 5, 0, 327680, 5, 0, 327681, 5, 0, 327682, 5, 0, 327683, 5, 0, 327684, 5, 0, 327685, 5, 0, 327686, 5, 0, 327687, 5, 0, 327688, 5, 0, 327689, 5, 0, 327690, 5, 0, 327691, 5, 0, 327692, 5, 0, 327693, 5, 0, 327694, 5, 0, 393216, 5, 0, 393217, 5, 0, 393218, 5, 0, 393219, 5, 0, 393220, 5, 0, 393221, 5, 0, 393222, 5, 0, 393223, 5, 0, 393224, 5, 0, 393225, 5, 0, 393226, 5, 0, 393227, 5, 0, 393228, 5, 0, 393229, 5, 0, 393230, 5, 0, 458752, 5, 0, 458753, 5, 0, 458754, 5, 0, 458755, 5, 0, 458756, 5, 0, 458757, 5, 0, 458758, 5, 0, 458759, 5, 0, 458760, 5, 0, 458761, 5, 0, 458762, 5, 0, 458763, 5, 0, 458764, 5, 0, 458765, 5, 0, 458766, 5, 0 )

[node name="tm_paths" type="TileMap" parent="."]
position = Vector2( 1.85059, 0 )
tile_set = ExtResource( 5 )
format = 1
tile_data = PoolIntArray( 65541, 14, 0, 131077, 0, 0, 196613, 0, 0, 262146, 12, 0, 262147, 1, 0, 262148, 1, 0, 262149, 2, 0, 262150, 3, 0, 262151, 7, 0, 262157, 14, 0, 327684, 5, 0, 327685, 4, 0, 327686, 11, 0, 327692, 12, 0, 327693, 2, 0, 327694, 7, 0, 393220, 13, 0, 393224, 12, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 11, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 7 )

[node name="Sources" type="Node2D" parent="."]
position = Vector2( -129.165, -7.74991 )

[node name="Task" parent="Sources" instance=ExtResource( 1 )]
position = Vector2( 278.672, 382.571 )

[node name="nav" type="Navigation2D" parent="."]
position = Vector2( 1.33484, -18.6878 )

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="nav"]
position = Vector2( 1.04357, 19.8279 )
navpoly = SubResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Base" type="Control" parent="UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBar" type="NinePatchRect" parent="UI/Base"]
modulate = Color( 1, 1, 1, 0.921569 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -104.0
texture = ExtResource( 9 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="drawRect" type="ColorRect" parent="UI/Base"]
margin_left = 22.0
margin_top = -410.0
margin_right = 62.0
margin_bottom = -370.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="UI/Base"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -130.84
margin_top = -593.718
margin_right = -2.84021
margin_bottom = -561.718
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitDialog" type="ConfirmationDialog" parent="UI/Base"]
margin_left = 397.938
margin_top = -343.674
margin_right = 597.938
margin_bottom = -273.674

[node name="Building" parent="." instance=ExtResource( 3 )]
position = Vector2( 788.094, 194.118 )

[node name="CU" parent="." instance=ExtResource( 2 )]
position = Vector2( 438.866, 215.268 )

[node name="Unit" parent="." instance=ExtResource( 4 )]

[node name="Unit4" parent="." instance=ExtResource( 4 )]
position = Vector2( 489.848, 354.174 )

[node name="Unit5" parent="." instance=ExtResource( 4 )]
position = Vector2( 606.942, 71.3246 )

[node name="Unit2" parent="." instance=ExtResource( 4 )]
position = Vector2( 724.082, 353.522 )

[node name="Unit3" parent="." instance=ExtResource( 4 )]
position = Vector2( 647.136, 183.618 )

[node name="UnitSpawner" type="Position2D" parent="."]
position = Vector2( 559.973, 273.825 )

[connection signal="input_event" from="Sources/Task" to="Sources/Task" method="_on_Task_input_event"]
[connection signal="pressed" from="UI/Base/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="confirmed" from="UI/Base/ExitDialog" to="." method="_on_ExitDialog_confirmed"]
[connection signal="body_entered" from="CU" to="CU" method="_on_CU_body_entered"]
